models updated with java 16 JEP 394: pattern Matching for instanceof